tests/negative/test_expr_deref_bad_type.orb
fnc main() {
    let i32 x = 100;
    *x;
}